// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractDisplayComponent should show the correct fields of a provided contract 1`] = `
<contract-display
  contract={[Function Object]}
>
  <div
    class="two-col-grid"
  >
    <nx-data-display
      label="Vertragsnummer"
    >
      1/2345678/9
    </nx-data-display>
    <nx-data-display
      label="Vertragsbeginn"
    >
      01.01.2024
    </nx-data-display>
    <nx-data-display
      label="Vertragsende"
    >
      -
    </nx-data-display>
    <nx-data-display
      label="Vorname"
    >
      Homer
    </nx-data-display>
    <nx-data-display
      label="Nachname"
    >
      Simpson
    </nx-data-display>
    <nx-data-display
      label="Geburtsdatum"
    >
      16.05.1961
    </nx-data-display>
  </div>
</contract-display>
`;

exports[`ContractDisplayComponent should show the fields of an empty contract if no contract is provided 1`] = `
<contract-display
  contract={[Function Object]}
>
  <div
    class="two-col-grid"
  >
    <nx-data-display
      label="Vertragsnummer"
    >
    </nx-data-display>
    <nx-data-display
      label="Vertragsbeginn"
    >
    </nx-data-display>
    <nx-data-display
      label="Vertragsende"
    >
      -
    </nx-data-display>
    <nx-data-display
      label="Vorname"
    >
    </nx-data-display>
    <nx-data-display
      label="Nachname"
    >
    </nx-data-display>
    <nx-data-display
      label="Geburtsdatum"
    >
    </nx-data-display>
  </div>
</contract-display>
`;
